unpackaged/main/default/objects/pw_ccpro__State__c/pw_ccpro__State__c.object-meta.xml
<CustomObject>
    <description>A list of standard States/Counties/Provinces used by AddressTools for both auto-completion at the UI level and validation/standardization at the database level.  All States have a parent Country.</description>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>