unpackaged/main/default/objects/pw_ccpro__State__c/fields/Intermediate_Region__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Region__c</fullName>
    <label>Intermediate Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Intermediate_Region</valueSetName>
    </valueSet>
</CustomField>