unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__Country__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__Country__c</fullName>
    <label>Country</label>
    <referenceTo>pw_ccpro__CountryObject__c</referenceTo>
    <relationshipLabel>States</relationshipLabel>
    <relationshipName>States</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>