unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__FullIsoCode__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__FullIsoCode__c</fullName>
    <formula>pw_ccpro__Country__r.pw_ccpro__IsoCode_2__c + &#39;-&#39; + pw_ccpro__IsoCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full ISO Code</label>
    <type>Text</type>
</CustomField>