unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__IsObsolete__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__IsObsolete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Obsolete</label>
    <type>Checkbox</type>
</CustomField>