unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__Notes__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__Notes__c</fullName>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>