unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__Regional_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__Regional_Sales_Manager__c</fullName>
    <label>Regional Sales Manager</label>
    <length>25</length>
    <type>Text</type>
</CustomField>