unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__TimeZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The principle time zone of this province / state / county / sub-country where data is available</inlineHelpText>
    <label>Time Zone</label>
    <referenceTo>pw_ccpro__TimeZone__c</referenceTo>
    <relationshipLabel>States</relationshipLabel>
    <relationshipName>States</relationshipName>
    <type>Lookup</type>
</CustomField>