unpackaged/main/default/objects/pw_ccpro__State__c/fields/pw_ccpro__TrimmedName__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__TrimmedName__c</fullName>
    <description>Takes the first 80 characters of the state name which ensures the right length for inserting into standard state fields.</description>
    <formula>TRIM ( LEFT (Name, 80) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trimmed Name</label>
    <type>Text</type>
</CustomField>